unpackaged/main/default/objects/Control_AR__c/Control_AR__c.object-meta.xml
<CustomObject>
    <label>Control Cliente AR</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Control No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Control Cliente AR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>