unpackaged/main/default/objects/Control_AR__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Control Cliente AR</relationshipLabel>
    <relationshipName>Control_Cliente_AR</relationshipName>
    <type>Lookup</type>
</CustomField>