unpackaged/main/default/objects/Control_AR__c/fields/Id_Proceso_AR__c.field-meta.xml
<CustomField>
    <fullName>Id_Proceso_AR__c</fullName>
    <label>Id Proceso AR</label>
    <length>20</length>
    <type>Text</type>
</CustomField>