unpackaged/main/default/objects/Control_AR__c/fields/Integracion_EBS_Clientes__c.field-meta.xml
<CustomField>
    <fullName>Integracion_EBS_Clientes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integración EBS Clientes</label>
    <referenceTo>Integracion_EBS_Clientes__c</referenceTo>
    <relationshipLabel>Control Cliente AR</relationshipLabel>
    <relationshipName>Control_Cliente_AR</relationshipName>
    <type>Lookup</type>
</CustomField>