unpackaged/main/default/objects/Control_AR__c/fields/Plan_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Plan_de_Venta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan de Venta</label>
    <referenceTo>Plan_de_Venta__c</referenceTo>
    <relationshipLabel>Control Cliente AR</relationshipLabel>
    <relationshipName>Control_Cliente_AR</relationshipName>
    <type>Lookup</type>
</CustomField>