unpackaged/main/default/objects/Control_AR__c/fields/Proceso_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Proceso_de_Venta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proceso de Venta</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Control Cliente AR</relationshipLabel>
    <relationshipName>Control_Cliente_AR</relationshipName>
    <type>Lookup</type>
</CustomField>