unpackaged/main/default/objects/Control_AR__c/fields/Proceso_de_Venta_text__c.field-meta.xml
<CustomField>
    <fullName>Proceso_de_Venta_text__c</fullName>
    <label>Proceso de Venta text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>